# tweaklib

./: .gitignore  .jshintrc  Makefile.am  configure.ac
src/: dt_double.c  dt_float.c  dt_int.c  example.c  http.c  http.h  ipc.c  ipc.h  list.c  list.h  log.c  log.h  pack.c  server.c  server.h  static.h  tweak.c  vars.h  websocket.c  websocket.h  worker.c  worker.h
src/templates/: default.html  wrapper.html
src/utils/: base64.c  base64.h  sha1.c  sha1.h
static/: index.html  style.css  templates.js  tweaklib.js
static/tweaklib/: field.js  numerical.js  socket.js  variable.js
tests/: ipc.cpp  ipc_fuzz.c  websocket.cpp
tweak/: tweak.h  version.h.in
