.PHONY: jshint

ACLOCAL_AMFLAGS = -I m4
AM_CFLAGS = -Wall -Wcast-qual -fvisibility=hidden -I${top_srcdir}/src
AM_CXXFLAGS = ${AM_CFLAGS}
BUILT_SOURCES = src/static.c ${top_srcdir}/static/generated/constants.js ${top_srcdir}/static/generated/templates.js ${top_srcdir}/tests/ipc_fuzz.bin

lib_LTLIBRARIES = libtweak.la
noinst_PROGRAMS = example pack ipc_fuzz

nobase_include_HEADERS = tweak/tweak.h tweak/version.h

libtweak_la_LIBADD = ${json_LIBS}
libtweak_la_LDFLAGS = -version-info 0:0:0 -pthread
libtweak_la_CFLAGS = ${AM_CFLAGS} ${json_CFLAGS}
libtweak_la_SOURCES = \
	src/dt_double.c \
	src/dt_float.c \
	src/dt_int.c \
	src/ipc.c src/ipc.h \
	src/http.c src/http.h \
	src/list.c src/list.h \
	src/log.c src/log.h \
	src/server.c src/server.h \
	src/static.c src/static.h \
	src/tweak.c \
	src/utils/base64.c src/utils/base64.h \
	src/utils/sha1.c src/utils/sha1.h \
	src/websocket.c src/websocket.h \
	src/worker.c src/worker.h
libtweak_la_TEMPLATES = \
	${top_srcdir}/src/templates/default.html \
	${top_srcdir}/src/templates/wrapper.html

example_LDADD = libtweak.la
example_LDFLAGS = -pthread
example_SOURCES = src/example.c

pack_SOURCES = src/pack.c
pack_DATAFILES = \
	static/generated/constants.js \
	static/generated/templates.js \
	static/index.html \
	static/style.css \
	static/tweaklib.js \
	static/tweaklib/field.js \
	static/tweaklib/numerical.js \
	static/tweaklib/socket.js \
	static/tweaklib/variable.js \
	static/vendor/handlebars.runtime-v3.0.3.js

src/static.c: pack Makefile ${pack_DATAFILES}
	$(AM_V_GEN)./pack $^ > $@

${top_srcdir}/static/generated/constants.js: src/vars.h Makefile
	@echo '/* autogenerated file */' > $@
	@echo '/* globals constants: true */' >> $@
	@echo 'var constants = {' >> $@
	$(AM_V_GEN)sed -rn 's/[\t ]*(DATATYPE_[A-Z]+) ?= ?([0-9]+),?/\t\1: \2,/gp' $< >> $@
	@echo '};' >> $@

${top_srcdir}/static/generated/templates.js: ${libtweak_la_TEMPLATES}
	$(AM_V_GEN)handlebars $^ > $@

jshint:
	@jshint --verbose -c ${top_srcdir}/.jshintrc `find ${top_srcdir}/static -path '*/static/vendor' -prune -o -path '*/static/generated/templates.js' -prune -o -type f -name '*.js' -print`

all-local: jshint

TESTS = tests/websocket tests/ipc
check_PROGRAMS = ${TESTS}
check_LIBRARIES = libtweak_test.a

tests_websocket_SOURCES = tests/websocket.cpp src/websocket.c
tests_websocket_CFLAGS = ${AM_CFLAGS} ${json_CFLAGS}
tests_websocket_LDADD = $(CPPUNIT_LIBS) libtweak_test.a ${libtweak_la_LIBADD}
tests_websocket_LDFLAGS = -pthread

tests_ipc_SOURCES = tests/ipc.cpp src/ipc.c
tests_ipc_CFLAGS = ${AM_CFLAGS} ${json_CFLAGS}
tests_ipc_LDADD = $(CPPUNIT_LIBS) libtweak_test.a ${libtweak_la_LIBADD}
tests_ipc_LDFLAGS = -pthread

libtweak_test_a_SOURCES = ${libtweak_la_SOURCES}
libtweak_test_a_CFLAGS = ${libtweak_la_CFLAGS}

ipc_fuzz_SOURCES = src/ipc.c src/log.c tests/ipc_fuzz.c

${top_srcdir}/tests/ipc_fuzz.bin: ipc_fuzz
	$(AM_V_GEN)./ipc_fuzz - > $@
